objects/Survey_Question_Response__c.object
<CustomObject>
    <fields>
        <fullName>Boolean_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Responses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responsess</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_Response__c</fullName>
        <label>Text Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey Question Option</label>
    <nameField>
        <displayFormat>SURQR-{00000000}</displayFormat>
        <label>Survey Question Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Reponses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>